feat: optimize sprider

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jimp": "^0.6.4",
     "koa-router": "^7.4.0",
     "koa2": "^2.0.0-alpha.7",
-    "qrcode-reader": "^1.0.4"
+    "qrcode-reader": "^1.0.4",
+    "tcp-ping": "^0.1.1"
   }
 }
