--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "jimp": "^0.6.4",
     "koa-router": "^7.4.0",
     "koa2": "^2.0.0-alpha.7",
