--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.ts",
   "scripts": {
     "start": "./node_modules/.bin/ts-node index.ts",
-    "test" : "./node_modules/.bin/mocha -r ./node_modules/ts-node/register ./test/index.test.ts",
+    "test": "./node_modules/.bin/mocha -r ./node_modules/ts-node/register ./test/index.test.ts",
     "test:index": "./node_modules/.bin/ts-node ./test/index.test.ts",
     "test:crawler": "./node_modules/.bin/ts-node ./test/crawler.test.ts",
     "test:storage": "./node_modules/.bin/ts-node ./test/storage.test.ts"
   },
+  "prepush":["test"],
   "keywords": [],
   "author": "",
   "license": "MIT",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "pre-push": "^0.1.1"
   }
 }
