--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "./node_modules/.bin/ts-node index.ts",
     "test": "./node_modules/.bin/mocha -r ./node_modules/ts-node/register ./test/index.test.ts",
     "test:index": "./node_modules/.bin/ts-node ./test/index.test.ts",
-    "test:crawler": "./node_modules/.bin/ts-node ./test/crawler.test.ts",
+    "test:crawler": "./node_modules/.bin/ts-node ./test/crawler_unit.test.ts",
     "test:storage": "./node_modules/.bin/ts-node ./test/storage.test.ts"
   },
-  "prepush":["test"],
+  "prepush": [
+    "test"
+  ],
   "keywords": [],
   "author": "",
   "license": "MIT",
